--- a/double11_data_describe.ipynb
+++ b/double11_data_describe.ipynb
@@ -20,6 +20,9 @@
     "+ 55.0%的商品价格相对于10号下降\n",
     "+ 1.7%的商品价格相对于10号上涨\n",
     "\n",
+    "我们把双十一价格的变化百分比的分布画出来：\n",
+    "![img](https://github.com/codeandworld/photo/blob/master/all_pr.png?raw=true)\n",
+    "\n",
     "下面为简单的统计描述："
    ]
   },
@@ -106,6 +109,9 @@
     "+ 双十一食品中，50.8%的价格下降，46.5%的价格保持不变。\n",
     "+ 十二号价格变动中，8.4%的商品继续保持双十一打折的状态，87.7%的商品回调至十号的价格。\n",
     "\n",
+    "我们把双十一价格的变化百分比的分布画出来：\n",
+    "![img](https://github.com/codeandworld/photo/blob/master/cate1_pr.png?raw=true)\n",
+    "\n",
     "下面为简单的统计描述："
    ]
   },
@@ -179,6 +185,9 @@
     "+ 双十一服装中，90.9%的价格下降，8.9%的价格保持不变。\n",
     "+ 十二号价格变动中，14.1%的商品继续保持双十一打折的状态，83.6%的商品回调至十号的价格。\n",
     "\n",
+    "我们把双十一价格的变化百分比的分布画出来：\n",
+    "![img](https://github.com/codeandworld/photo/blob/master/cate3_pr.png?raw=true)\n",
+    "\n",
     "下面为简单的统计描述："
    ]
   },
@@ -246,11 +255,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 医疗\n",
+    "### 医疗\n",
     "+ 医疗在双十一整体折扣幅度为15.7%，基本是总体的8%的两倍，同样为价格大幅度下降的商品，\n",
     "+ 双十一最高折扣为89.0%。\n",
     "+ 双十一医疗中，82.5%的价格下降，17.0%的价格保持不变。\n",
     "+ 十二号价格变动中，12.6%的商品继续保持双十一打折的状态，86.1%的商品回调至十号的价格。\n",
+    "\n",
+    "我们把双十一价格的变化百分比的分布画出来：\n",
+    "![img](https://github.com/codeandworld/photo/blob/master/cate5_pr.png?raw=true)\n",
     "\n",
     "下面为简单的统计描述："
    ]
@@ -387,6 +399,7 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
    "display_name": "Python [conda root]",
    "language": "python",
